@@ -8,7 +8,9 @@ Changelog file for omnibook package:
   the support is pretty minimalistic (LCD brigtness only) this
   also inaugurate ectype 14
 * Cleanup/Fix in Makefile
+  Include explicit depmod in the 'load' target
 * Improvements in the Debian packages by Julien Valroff
+* Fix backlight support conditional compilation
 
 2.20060809 Mathieu Bérard <math_b@users.sourceforge.net>
 * Add dmi info for Toshiba Satellite M40X (Thanks Julien Valroff) 
